fixed image on mobile devices? #6

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,8 @@ h2 {
 
 #photo {
 	width: 75% !important;
-	text-align: center !important;
+	display: block;
+	margin: auto;
 	margin: 16px !important;
 }
 
